Validate generated MHTML in mhtml_generation_browsertest.cc tests.

Attempts to load the generated MHTML file after creating it for all tests in
mhtml_generation_browsertest.cc. This allows for validation of its contents
being well formed by verifying that the newly added console message is not
reported.

Also simplifies the checking for the MHTML generation succeeding by asserting
from inside the generation call instead of having checks for test failure in
multiple tests.

BUG=672313

Review-Url: https://codereview.chromium.org/2866873002
Cr-Commit-Position: refs/heads/master@{#472939}

Former-commit-id: 656b9cae0b536ee2f9b8a2777f76ba4a4d775173